# aura

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a79891989aa_user_is_curator.py  2ede1b3cfa07_floor_signals.py  46942500d2d0_initial_schema.py  a7b8c9d0e1f2_bookings.py  b2c3d4e5f6a7_price_obs_guests.py  bf229bcd9b8b_waitlist_entries.py  bf74eaa0a9b8_user_role.py  c1a2b3d4e5f6_recommendation_competitor_median.py  c3d4e5f6a7b8_password_reset_tokens.py  d2b3c4e5f6a7_action_tokens.py  d4e5f6a7b8c9_audit_logs.py  e6e70cbf8160_event_venue_coordinates.py  e9c194e896d9_calendar_days_and_listing_distance.py  f1a2b3c4d5e6_market_supply.py
backend/app/: __init__.py  action_tokens.py  alerts.py  attribution.py  audit.py  backup.py  billing.py  bookings.py  config.py  data_quality.py  db.py  emails.py  engine.py  geo.py  hardening.py  ical.py  main.py  monitoring.py  onboarding.py  password_reset.py  performance.py  robots.py  scheduler.py  seed.py
backend/app/api/: account.py  actions.py  (+7 more)
backend/tests/: conftest.py  test_action_tokens.py  test_api_sprint2.py  test_atlasarena.py  test_audit.py  test_auth.py  test_backup.py  test_bookings.py  test_curation_bulk.py  test_data_quality.py  test_design_rules.py  test_engine.py  test_event_sources.py  test_ical.py  test_katowice_stulecia.py  test_monitoring.py  test_nocowanie.py  test_occupancy_views.py  test_password_reset.py  test_performance.py  test_pge.py  test_recommendations_api.py  test_roles.py  test_scraping.py  test_sprint4.py  test_sprint5.py  test_tarczynski.py  test_tribe.py  test_trojmiasto.py
(+86 files in other folders)
